controle de propostas liberadas.

--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -23,6 +23,8 @@
 
 {% block content %}
 
+  <h3>Procura pela Propostas de Projetos</h3>
+
   <label for="filter">Edição:</label>
   <select id="filter" class="filter" data-tableId="projetos"
   {% comment %}onchange="location = this.options[this.selectedIndex].value;"{% endcomment %}>
