--- a/projetos/templates/projetos/proposta_submissao.html
+++ b/projetos/templates/projetos/proposta_submissao.html
@@ -15,6 +15,12 @@
 
 {% block content %}
 
+  {% if edicao and liberadas_propostas %}
+    <h3 class="red-bold">Propostas de Projetos já liberadas para estudantes, edição desabilitada.</h3>
+    <br>
+  {% endif %}
+
+
   <h5>
   {% if edicao %}
     Edição
@@ -32,81 +38,87 @@
 
   <form action="" method="post"> {% csrf_token %}  
 
-    <label for="nome">Nome:</label><input type="text" size="75" maxlength="127" id="nome" name="nome" value="{{full_name}}"  pattern="^\S+(?:[ ]+\S+){1,99}[ ]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" oninput="this.setCustomValidity('')"  required><br><br>
-    <label for="email">e-mail:</label><input type="text" size="75"  maxlength="80" id="email" name="email" value="{{email}}" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99  }[ ]*([;,][ ]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*$" oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" oninput="this.setCustomValidity('')" required><br><br>
+    <label for="nome">Nome:</label><input type="text" size="75" maxlength="127" id="nome" name="nome" value="{{full_name}}"  pattern="^\S+(?:[ ]+\S+){1,99}[ ]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" oninput="this.setCustomValidity('')"  required {% if edicao and liberadas_propostas %}disabled{% endif %}><br><br>
+    <label for="email">e-mail:</label><input type="text" size="75"  maxlength="80" id="email" name="email" value="{{email}}" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99  }[ ]*([;,][ ]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*$" oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" oninput="this.setCustomValidity('')" required {% if edicao and liberadas_propostas %}disabled{% endif %}><br><br>
     
     <label for="organizacao">Nome da Instituição/Empresa<br>
     <small>sigla e nome comercial/fantasia se houver (aqui não é necessário indicar a Razão Social)</small>
     </label><br>
-    <textarea id="organizacao" name="organizacao" rows="1" cols="80" maxlength="120" required>{{ organizacao }}</textarea>
+    <textarea id="organizacao" name="organizacao" rows="1" cols="80" maxlength="120" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{ organizacao }}</textarea>
     <br><br>
 
-    <label for="website">website:</label><input type="text" size="73"  maxlength="250" id="website" name="website" value="{{website}}" placeholder="https://www.insper.edu.br" required><br><br>
+    <label for="website">website:</label><input type="text" size="73"  maxlength="250" id="website" name="website" value="{{website}}" placeholder="https://www.insper.edu.br" required {% if edicao and liberadas_propostas %}disabled{% endif %}><br><br>
 
     <label for="endereco">Endereço<br>
     <small>onde os alunos deverão ir para desenvolver o projeto</small>
     </label><br>
-    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="400" required>{{endereco}}</textarea>
+    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="400" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{endereco}}</textarea>
     <br><br>
 
     <label for="contatos_tecnicos">Contatos Técnicos<br>  
     <small>nome/e-mail/telefone de quem os alunos e professores orientadores irão tratar do desenvolvimento do projeto</small>
     </label><br>
-    <textarea id="contatos_tecnicos" name="contatos_tecnicos" rows="4" cols="80" maxlength="400" required>{{contatos_tecnicos}}</textarea>
+    <textarea id="contatos_tecnicos" name="contatos_tecnicos" rows="4" cols="80" maxlength="400" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{contatos_tecnicos}}</textarea>
     <br><br>
 
     <label for="contatos_adm">Contatos Administrativos<br>     
     <small>nome/e-mail/telefone, com quem devemos resolver questões contratuais e RH</small>
     </label><br>
-    <textarea id="contatos_adm" name="contatos_adm" rows="4" cols="80" maxlength="400" required>{{contatos_adm}}</textarea>
+    <textarea id="contatos_adm" name="contatos_adm" rows="4" cols="80" maxlength="400" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{contatos_adm}}</textarea>
     <br><br>
 
     <label for="descricao_organizacao">Informações sobre a instituição/empresa<br>
     <small>descreva a instituição/empresa para os alunos entenderem o que ela faz (opcional)</small>
     </label><br>
-    <textarea id="descricao_organizacao" name="descricao_organizacao" rows="4" cols="80" maxlength="3000">{{descricao_organizacao}}</textarea>
+    <textarea id="descricao_organizacao" name="descricao_organizacao" rows="4" cols="80" maxlength="3000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{descricao_organizacao}}</textarea>
     <br><br>
 
     <label for="info_departamento">Informações sobre a departamento<br>
     <small>descreva o departamento/área para os alunos entenderem o que ele faz (opcional)</small>
     </label><br>
-    <textarea id="info_departamento" name="info_departamento" rows="4" cols="80" maxlength="3000">{{info_departamento}}</textarea>
+    <textarea id="info_departamento" name="info_departamento" rows="4" cols="80" maxlength="3000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{info_departamento}}</textarea>
     <br>
     <hr>
 
     <label for="titulo">Título provisório do projeto<br>
     <small>um título para ser apresentado aos alunos</small>
     </label><br>
-    <input type="text" size="80" maxlength="160" id="titulo" name="titulo" value="{{titulo}}" required>
+    <input type="text" size="80" maxlength="160" id="titulo" name="titulo" value="{{titulo}}" required {% if edicao and liberadas_propostas %}disabled{% endif %}>
     <br><br>
 
     <label for="desc_projeto">Descrição do Projeto<br>
     <small>para discussão entre professores e que será passada para os alunos</small>
     </label><br>
-    <textarea id="desc_projeto" name="desc_projeto" rows="4" cols="80" maxlength="3000" required>{{desc_projeto}}</textarea>
+    <textarea id="desc_projeto" name="desc_projeto" rows="4" cols="80" maxlength="3000" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{desc_projeto}}</textarea>
     <br><br>
 
     <label for="expectativas">Expectativas de resultados/entregas<br>
     <small>exemplo: estudos, validações, relatórios, protótipos, testes</small>
     </label><br>
-    <textarea id="expectativas" name="expectativas" rows="4" cols="80" maxlength="3000" required>{{expectativas}}</textarea>
+    <textarea id="expectativas" name="expectativas" rows="4" cols="80" maxlength="3000" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{expectativas}}</textarea>
     <br><br>
 
     Áreas/Habilidades envolvidas no projeto<br>
-    {% include "areas.html"%}
+    {% if edicao and liberadas_propostas %}
+      {% with vencido=True %}
+        {% include "areas.html" %}
+      {% endwith %}
+    {% else %}
+      {% include "areas.html" %}
+    {% endif %}
     <br>
     <br>
 
     <label for="recursos">Recursos a serem disponibilizados aos alunos<br>
     <small>algo será fornecido para os alunos? ex: kits de desenvolvimento, matérias primas, acesso a infra de cloud. (opcional)</small>
     </label><br>
-    <textarea id="recursos" name="recursos" rows="4" cols="80" maxlength="1000">{{recursos}}</textarea>
+    <textarea id="recursos" name="recursos" rows="4" cols="80" maxlength="1000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{recursos}}</textarea>
     <br><br>
 
     <label for="observacoes">Outras observações que considere relevante para os alunos<br>
     <small>caso desejar apresentar alguma informação adicional aos alunos (opcional)</small>
     </label><br>
-    <textarea id="observacoes" name="observacoes" rows="4" cols="80" maxlength="3000">{{observacoes}}</textarea>
+    <textarea id="observacoes" name="observacoes" rows="4" cols="80" maxlength="3000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{observacoes}}</textarea>
     <br><br>
 
     Obs.: Ao submeter o projeto, deve ficar claro que a intenção do Projeto Final de Engenharia é 
@@ -122,11 +134,12 @@
     laboratórios do Insper para o desenvolvimento do projeto em horários agendados.
     
     <br><br>
-    
-    {% if edicao %}
-      <input type="submit" value="Atualizar Proposta de Projeto">
-    {% else %}
-      <input type="submit" value="Enviar Proposta de Projeto">
+    {% if not liberadas_propostas %}
+      {% if edicao %}
+        <input type="submit" value="Atualizar Proposta de Projeto">
+      {% else %}
+        <input type="submit" value="Enviar Proposta de Projeto">
+      {% endif %}
     {% endif %}
   
   </form>
