Novo sistema de histograma de procura de projetos

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -25,7 +25,7 @@
     <ul>
         <a href="{% url 'organizacoes_prospectadas' %}"><li>Organizações Prospectadas</li></a>
         <a href="{% url 'propostas_lista' 'disponiveis' %}"><li>Propostas Apresentadas</li></a>
-        <a href="{% url 'histograma' %}"><li>Procura (histograma de preferências)</li></a>        
+        <a href="{% url 'procura_propostas' %}"><li>Procura pelas Propostas (histograma)</li></a>
     </ul>
 
     <h5>Estudantes</h5>
