--- a/projetos/templates/projetos/procura_propostas.html
+++ b/projetos/templates/projetos/procura_propostas.html
@@ -34,12 +34,7 @@
     var barChartData = {
 			labels: [
         {% for proposta in propostas %} 
-          '{{proposta.titulo}}',
-        {% endfor %}
-        ],
-      datakeys:[
-        {% for proposta in propostas %} 
-          '{{proposta.organizacao}}',
+          '{{proposta.titulo}} ({{proposta.organizacao}})',
         {% endfor %}
         ],
 			datasets: [
@@ -218,7 +213,7 @@ function titulos(animation) {
           var label = slice[0]._model.label;
           switch (label) {
             {% for proposta in propostas %} 
-              case '{{proposta.titulo}}':
+              case '{{proposta.titulo}} ({{proposta.organizacao}})':
                 location.href = "{% url 'proposta_completa' proposta.id %}";
                 break;
             {% endfor %}
