--- a/projetos/templates/projetos/procura_propostas.html
+++ b/projetos/templates/projetos/procura_propostas.html
@@ -102,8 +102,8 @@
       Chart.helpers.each(meta.data.forEach((bar, index) => {
         const label = this.data.labels[index]
         const labelPositionX = 9
-        const labelPositionY = bar._model.y-8
-        const labelWidth = ctx.measureText(label).width + labelPositionX
+        const labelPositionY = bar._model.y-(bar._model.height/2)
+        const labelWidth = ctx.measureText(label).width
 
         ctx.textBaseline = 'bottom'
         ctx.textAlign = 'left'
@@ -122,7 +122,7 @@
             label: label,
             x: labelPositionX,
             y: labelPositionY,
-            w: ctx.measureText(label).width,
+            w: labelWidth,
             h: 12,
         };
 
@@ -158,7 +158,8 @@
       Chart.helpers.each(meta.data.forEach((bar, index) => {
         const label = this.data.labels[index];
         const labelPositionX = 9;
-        const labelWidth = ctx.measureText(label).width + labelPositionX;
+        const labelPositionY = bar._model.y-(bar._model.height/2)
+        const labelWidth = ctx.measureText(label).width
 
         ctx.textBaseline = 'bottom';
         ctx.textAlign = 'left';
@@ -169,8 +170,8 @@
           espaco = 25
         }
         label_limpo = label.replace("&amp;", "&")
-        ctx.fillText(label_limpo, labelPositionX+espaco, bar._model.y-8);
-        ctx.fillText(counter.toString()+"º : ", labelPositionX, bar._model.y-8);
+        ctx.fillText(label_limpo, labelPositionX+espaco, labelPositionY)
+        ctx.fillText(counter.toString()+"º : ", labelPositionX, labelPositionY)
         counter = counter + 1
 
       }));
