Visualizar montagem de grupos online

--- a/users/templates/users/alunos_inscritos.html
+++ b/users/templates/users/alunos_inscritos.html
@@ -58,7 +58,7 @@
                   |{% mede_aderencia aluno opcao.proposta %}%|
                   <br>
                 {% empty %}
-                  Aluno(a) não escolheu opções de proposta de projetos
+                  Estudante não escolheu opções de proposta de projetos
                 {% endfor %}
                 "
             >
