cor melhor para aviso

--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -121,7 +121,7 @@
 
     function cor_estudante(estudante, proposta) {
       prioridades = estudante.data("prioridades")
-      estudante.css("background-color", "red");
+      estudante.css("background-color", "#FF7090");
       for (var i = 0; i < prioridades.length; ++i) {
           if(prioridades[i]==proposta) {
             if(i>4) { // passou da quinta opção
